frontend/test/should_pass/dangle_001.grg
using attrib_model_001;

rule r {
	<-- :Node;
	--> :Node;
	:Node <--;
	:Node -->;
	<-- :Node -->;
	<-- :Node <--;
	--> :Node -->;
	--> :Node <--;
	--> :Node <-- :Node <--;
	-->;

	modify {
	}
}


