frontend/test/should_fail/basic_111.grg
using basic_model_002;

rule dummy {
  . -e:Edge-> .;
  modify {
    -:AbsE<e>->;
  }
}
